package command;

import "SecurityCommand.proto";
import "RawInputCommand.proto";


message Command
{
	enum CommandType
	{
		SECURITY = 0;
        RAWINPUT = 1;
	}
	required CommandType type = 1 [default = SECURITY];
    optional SecurityCommand securityCommand = 2;
    optional RawInputCommand rawInputCommand = 3;
}
